--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -1,9 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="new_version">Nueva versión</string> 
-    <string name="upgrade">Actualizar</string> 
-    <string name="not_now">Ahora no</string> 
-    <string name="loading">Cargando\u2026</string> 
     <string name="about_author">Autor:</string>
     <string name="about_blizzard">Ventisca</string>
     <string name="about_cloudy">Nublado</string>
@@ -45,6 +41,8 @@
     <string name="conf_name">Configurar Widget</string>
     <string name="conf_no_background">Sin fondo</string>
     <string name="date_format_title">Formato de fecha</string>
+    <string name="date_format_mdy">MM/dd/yyyy</string>
+    <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Selector de color</string>
     <string name="dlg_go_to_forecast">Ir al pronóstico</string>
     <string name="dlg_select_action">Seleccione una acción</string>
@@ -69,8 +67,56 @@
     <string name="download_video">Descargar vídeo</string>
     <string name="end_time_title">Fin</string>
     <string name="fetching_location">Obteniendo ubicación\u2026</string>
+    <string name="foreca_clear">Despejado</string>
+    <string name="foreca_cloudy">Nublado</string>
+    <string name="foreca_cloudy_l_rain">Lluvia suave</string>
+    <string name="foreca_cloudy_l_snow">Nevada suave</string>
+    <string name="foreca_cloudy_l_wet_snow">Aguanive</string>
+    <string name="foreca_cloudy_rain">Lluvia</string>
+    <string name="foreca_cloudy_showers">Showers</string>
+    <string name="foreca_cloudy_snow">Snow</string>
+    <string name="foreca_cloudy_snow_showers">Snow showers</string>
+    <string name="foreca_cloudy_ts_rain">T-storms with rain</string>
+    <string name="foreca_cloudy_ts_snow">T-storms with snow</string>
+    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_cloudy_wet_snow">Wet snow</string>
+    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_mostly_clear">Mostly clear</string>
+    <string name="foreca_mostly_clear_pos_rain">Chance of rain</string>
+    <string name="foreca_mostly_clear_pos_snow">Chance of snow</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Chance of t-storms with rain</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Chance of t-storms with snow</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Chance of wet snow</string>
+    <string name="foreca_overcast">Overcast</string>
+    <string name="foreca_overcast_l_rain">Light rain</string>
+    <string name="foreca_overcast_l_snow">Light snow</string>
+    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
+    <string name="foreca_overcast_rain">Rain</string>
+    <string name="foreca_overcast_showers">Showers</string>
+    <string name="foreca_overcast_snow">Snow</string>
+    <string name="foreca_overcast_snow_showers">Snow showers</string>
+    <string name="foreca_overcast_ts_rain">T-storms with rain</string>
+    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
+    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_overcast_wet_snow">Wet snow</string>
+    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_partly_cloudy">Partly cloudy</string>
+    <string name="foreca_partly_cloudy_l_rain">Light rain</string>
+    <string name="foreca_partly_cloudy_l_snow">Light snow</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_partly_cloudy_rain">Rain</string>
+    <string name="foreca_partly_cloudy_showers">Showers</string>
+    <string name="foreca_partly_cloudy_snow">Snow</string>
+    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
+    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
     <string name="changelog">Lista de cambios</string>
     <string name="just_now">Ahora mismo</string>
+    <string name="loading">Cargando\u2026</string>
     <string name="location_edit">Introduce el criterio de búsqueda</string>
     <string name="location_gps">Usar ubicación actual</string>
     <string name="location_list">Lista de ciudades</string>
@@ -82,8 +128,10 @@
     <string name="menu_trend">Tendencia</string>
     <string name="menu_update">Actualizar</string>
     <string name="network_error">No se pudo conectar al servidor</string>
+    <string name="new_version">Nueva versión</string>
     <string name="no_provider">Fallo al posicionar\nEscoge ubicación manual</string>
     <string name="no_weather_provider">No se ha encontrado el proveedor de climatología MIUI</string>
+    <string name="not_now">Ahora no</string>
     <string name="ok">Ok</string>
     <string name="press_color_to_apply">Pulse en el nuevo color para aplicar</string>
     <string name="pressure_units">Unidades de presión</string>
@@ -140,6 +188,7 @@
     <string name="settings_update_wake_title">Despertar dispositivo</string>
     <string name="settings_update_wifi_only_summary">Actualizar automáticamente el pronóstico del tiempo sólo cuando se disponga de conexión Wifi</string>
     <string name="settings_update_wifi_only_title">Actualizar mediante Wi-Fi</string>
+    <string name="settings_weather_provider">Proveedor de clima</string>
     <string name="settings_widgets_click_clock_summary">Seleccione la aplicación que se iniciará al tocar el reloj</string>
     <string name="settings_widgets_click_clock_title">Clic en el reloj</string>
     <string name="settings_widgets_click_date_summary">Seleccione la aplicación que se iniciará al tocar fecha</string>
@@ -167,12 +216,18 @@
     <string name="settings_widgets_widget4x2_temp_font_title">Temperatura</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Por defecto 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Viento</string>
+    <string name="share">Compartir</string>
+    <string name="share_content">\#WeatherBZ#</string>
+    <string name="share_weather_content">"\#WeatherBZ# El tiempo para hoy en %1$s es %2$s, %3$s, %4$s. Actualizado %5$s."</string>
+    <string name="share_weather_title">Compartir previsión del tiempo</string>
+    <string name="save_screen_shot_failed">Fallo al guardar la captura de pantalla</string>
     <string name="start_time_title">Inicio</string>
     <string name="temperature_units">Unidad de temperatura</string>
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Color del texto</string>
     <string name="updating">Actualizando\u2026</string>
+    <string name="upgrade">Actualizar</string>
     <string name="visibility_units">Unidad de visibilidad</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
