--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -10,8 +10,8 @@
     <string name="about_for_translators_text">Si deseas ayudar con la traducción de esta aplicación a tu idioma, visita mi página de github (usando el botón de arriba) para ver todos los recursos</string>
     <string name="about_hailstone">Granizo</string>
     <string name="about_heavy_snow">Temporal de nieve</string>
-    <string name="about_light_rain">Lluvia ligera</string>
-    <string name="about_light_snow">Nieve ligera</string>
+    <string name="about_light_rain">Ligera lluvia</string>
+    <string name="about_light_snow">Ligera nevada</string>
     <string name="about_overcast">Cubierto</string>
     <string name="about_rain">Lluvia</string>
     <string name="about_rainstorm">Temporal de lluvia</string>
@@ -69,51 +69,51 @@
     <string name="fetching_location">Obteniendo ubicación\u2026</string>
     <string name="foreca_clear">Despejado</string>
     <string name="foreca_cloudy">Nublado</string>
-    <string name="foreca_cloudy_l_rain">Lluvia suave</string>
-    <string name="foreca_cloudy_l_snow">Nevada suave</string>
-    <string name="foreca_cloudy_l_wet_snow">Aguanive</string>
+    <string name="foreca_cloudy_l_rain">Ligera lluvia</string>
+    <string name="foreca_cloudy_l_snow">Ligera nevada</string>
+    <string name="foreca_cloudy_l_wet_snow">Ligera aguanieve</string>
     <string name="foreca_cloudy_rain">Lluvia</string>
-    <string name="foreca_cloudy_showers">Showers</string>
-    <string name="foreca_cloudy_snow">Snow</string>
-    <string name="foreca_cloudy_snow_showers">Snow showers</string>
-    <string name="foreca_cloudy_ts_rain">T-storms with rain</string>
-    <string name="foreca_cloudy_ts_snow">T-storms with snow</string>
-    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
-    <string name="foreca_mostly_clear">Mostly clear</string>
-    <string name="foreca_mostly_clear_pos_rain">Chance of rain</string>
-    <string name="foreca_mostly_clear_pos_snow">Chance of snow</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Chance of t-storms with rain</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Chance of wet snow</string>
-    <string name="foreca_overcast">Overcast</string>
-    <string name="foreca_overcast_l_rain">Light rain</string>
-    <string name="foreca_overcast_l_snow">Light snow</string>
-    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
-    <string name="foreca_overcast_rain">Rain</string>
-    <string name="foreca_overcast_showers">Showers</string>
-    <string name="foreca_overcast_snow">Snow</string>
-    <string name="foreca_overcast_snow_showers">Snow showers</string>
-    <string name="foreca_overcast_ts_rain">T-storms with rain</string>
-    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
-    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
-    <string name="foreca_overcast_wet_snow">Wet snow</string>
-    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
-    <string name="foreca_partly_cloudy">Partly cloudy</string>
-    <string name="foreca_partly_cloudy_l_rain">Light rain</string>
-    <string name="foreca_partly_cloudy_l_snow">Light snow</string>
-    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
-    <string name="foreca_partly_cloudy_rain">Rain</string>
-    <string name="foreca_partly_cloudy_showers">Showers</string>
-    <string name="foreca_partly_cloudy_snow">Snow</string>
-    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
-    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
-    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_cloudy_showers">Chubascos</string>
+    <string name="foreca_cloudy_snow">Nieve</string>
+    <string name="foreca_cloudy_snow_showers">Chubascos de nieve</string>
+    <string name="foreca_cloudy_ts_rain">Tormentas con lluvia</string>
+    <string name="foreca_cloudy_ts_snow">Tormentas con nieve</string>
+    <string name="foreca_cloudy_ts_wet_snow">Tormentas con aguanieve</string>
+    <string name="foreca_cloudy_wet_snow">Aguanieve</string>
+    <string name="foreca_cloudy_wet_snow_showers">Chubascos de aguanieve</string>
+    <string name="foreca_mostly_clear">Despejado</string>
+    <string name="foreca_mostly_clear_pos_rain">Posibilidad de lluvia</string>
+    <string name="foreca_mostly_clear_pos_snow">Posibilidad de nieve</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Posibilidad de tormentas con lluvia</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Posibilidad de tormentas con nieve</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Posibilidad de tormentas con aguanieve</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Posibilidad de aguanieve</string>
+    <string name="foreca_overcast">Cubierto</string>
+    <string name="foreca_overcast_l_rain">Ligera lluvia</string>
+    <string name="foreca_overcast_l_snow">Ligera nevada</string>
+    <string name="foreca_overcast_l_wet_snow">Ligera aguanieve</string>
+    <string name="foreca_overcast_rain">Lluvia</string>
+    <string name="foreca_overcast_showers">Chubascos</string>
+    <string name="foreca_overcast_snow">Nieve</string>
+    <string name="foreca_overcast_snow_showers">Chubascos de nieve</string>
+    <string name="foreca_overcast_ts_rain">Tormentas con lluvia</string>
+    <string name="foreca_overcast_ts_snow">Tormentas con nieve</string>
+    <string name="foreca_overcast_ts_wet_snow">Tormentas con aguanieve</string>
+    <string name="foreca_overcast_wet_snow">Aguanieve</string>
+    <string name="foreca_overcast_wet_snow_showers">Chubascos de aguanieve</string>
+    <string name="foreca_partly_cloudy">Parcialmente nublado</string>
+    <string name="foreca_partly_cloudy_l_rain">Ligera lluvia</string>
+    <string name="foreca_partly_cloudy_l_snow">Ligera nevada</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Ligera aguanieve</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Posibilidad de tormentas con lluvia</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Posibilidad de tormentas con nieve</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Posibilidad de tormentas con aguanieve</string>
+    <string name="foreca_partly_cloudy_rain">Lluvia</string>
+    <string name="foreca_partly_cloudy_showers">Chubascos</string>
+    <string name="foreca_partly_cloudy_snow">Nieve</string>
+    <string name="foreca_partly_cloudy_snow_showers">Chubascos de nieve</string>
+    <string name="foreca_partly_cloudy_wet_snow">Aguanieve</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Chubascos de aguanieve</string>
     <string name="changelog">Lista de cambios</string>
     <string name="just_now">Ahora mismo</string>
     <string name="loading">Cargando\u2026</string>
@@ -129,7 +129,7 @@
     <string name="menu_update">Actualizar</string>
     <string name="network_error">No se pudo conectar al servidor</string>
     <string name="new_version">Nueva versión</string>
-    <string name="no_provider">Fallo al posicionar\nEscoge ubicación manual</string>
+    <string name="no_provider">Fallo al posicionar\nEscoge tu ubicación manualmente</string>
     <string name="no_weather_provider">No se ha encontrado el proveedor de climatología MIUI</string>
     <string name="not_now">Ahora no</string>
     <string name="ok">Ok</string>
