--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -1,25 +1,21 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="new_version">Nowa wersja</string> 
-    <string name="upgrade">Aktualizuj</string> 
-    <string name="not_now">Później</string> 
-    <string name="loading">Wczytywanie\u2026</string> 
-    <string name="about_author">Autor:</string>
-    <string name="about_blizzard">Burza śnieżna</string>
-    <string name="about_cloudy">Pochmurnie</string>
-    <string name="about_cloudy_night">Pochmurna noc</string>
+    <string name="about_author">Autor:</string> 
+    <string name="about_blizzard">Burza śnieżna</string> 
+    <string name="about_cloudy">Pochmurnie</string> 
+    <string name="about_cloudy_night">Pochmurna noc</string> 
     <string name="about_dust">Pylisto</string>
     <string name="about_fog">Mgła</string>
     <string name="about_for_translators">For Translators:</string>
     <string name="about_for_translators_text">If you want to help with translation this app into your language, just go to the my github page (using the button above) to see all resources</string>
     <string name="about_hailstone">Grad</string>
     <string name="about_heavy_snow">Śnieg</string>
-    <string name="about_light_rain">Lekki deszcz</string> 
-    <string name="about_light_snow">Lekki śnieg</string> 
+    <string name="about_light_rain">Lekki deszcz</string>
+    <string name="about_light_snow">Lekki śnieg</string>
     <string name="about_overcast">Zachmurzenie</string>
     <string name="about_rain">Deszcz</string>
-    <string name="about_rainstorm">Ulewy</string>
-    <string name="about_showers">Przelotne deszcze</string>
+    <string name="about_rainstorm">Ulewy</string> 
+    <string name="about_showers">Przelotne deszcze</string> 
     <string name="about_sleet">Deszcz ze śniegiem</string>
     <string name="about_snow">Śnieg</string>
     <string name="about_social">Linki społecznościowe:</string>
@@ -32,19 +28,22 @@
     <string name="btn_add_location">Dodaj lokalizację</string>
     <string name="btn_delete_location">Usuń lokalizację</string>
     <string name="cancel">Anuluj</string>
+    <string name="changelog">Zmiany</string>
     <string name="clear_miui_data">Wyczyść dane pogody MIUI</string>
     <string name="clear_miui_data_dialog">Usuń dane pogody MIUI</string>
     <string name="clear_miui_data_dialog_ask">Usunąć dane MIUI Weather?</string>
     <string name="clear_miui_data_dialog_text">Dane pogody MIUI wyczyszczone!</string>
-    <string name="clear_miui_data_summary">Usuwa dane dostawcy pogody MIUI</string>              
+    <string name="clear_miui_data_summary">Usuwa dane dostawcy pogody MIUI</string>
     <string name="close">Zamknij</string>
     <string name="conf_add_widget">Dodaj widżet</string>
-    <string name="conf_choose_skin">Wybierz skórkę</string>
+    <string name="conf_choose_skin">Wybierz skórkę</string>              
     <string name="conf_dark_skin">Ciemny</string>
     <string name="conf_light_skin">Jasny</string>
     <string name="conf_name">Widżety</string>
     <string name="conf_no_background">Brak tła</string>
     <string name="date_format_title">Format daty</string>
+    <string name="date_format_mdy">MM/dd/yyyy</string>
+    <string name="date_format_dmy">dd/MM/yyyy</string>
     <string name="dialog_color_picker">Wybieranie kolorów</string>
     <string name="dlg_go_to_forecast">Przejdź do prognozy</string>
     <string name="dlg_select_action">Wybierz akcje</string>
@@ -54,11 +53,11 @@
     <string name="donations_description">"Czy uważasz tę aplikację za przydatną?
 Doceń autora pozytywnym komentarzem lub przekazując mu darowiznę!"</string>
     <string name="donations_flattr">Flattr</string>
-    <string name="donations_flattr_description">Flattr pobiera 10% jako miesięczną opłatę!</string>   
-    <string name="donations_google_android_market">Sklep Google Play</string>   
+    <string name="donations_flattr_description">Flattr pobiera 10% jako miesięczną opłatę!</string>
+    <string name="donations_google_android_market">Sklep Google Play</string>
     <string name="donations_google_android_market_description">Google pobiera 30% kwoty z każdej darowizny!</string>
-    <string name="donations_google_android_market_donate_button">Przekaż!</string>
-    <string name="donations_google_android_market_not_supported">Brak wsparcia dla wbudowanych płatności. Czy aplikacja Sklep Google Play jest zainstalowana prawidłowo?</string>
+    <string name="donations_google_android_market_donate_button">Przekaż!</string>   
+    <string name="donations_google_android_market_not_supported">Brak wsparcia dla wbudowanych płatności. Czy aplikacja Sklep Google Play jest zainstalowana prawidłowo?</string>   
     <string name="donations_google_android_market_not_supported_title">Brak wsparcia dla wbudowanych płatności</string>
     <string name="donations_google_android_market_text">Kwota do przekazania?</string>
     <string name="donations_paypal">PayPal</string>
@@ -70,8 +69,56 @@ Naprawdę to doceniam!"</string>
     <string name="download_video">Pobierz wideo</string>
     <string name="end_time_title">Koniec</string>
     <string name="fetching_location">Określanie pozycji…</string>
-    <string name="changelog">Zmiany</string>
+    <string name="foreca_clear">Pogodnie</string>
+    <string name="foreca_cloudy">Pochmurno</string>
+    <string name="foreca_cloudy_l_rain">Lekki deszcz</string>
+    <string name="foreca_cloudy_l_snow">Lekki śnieg</string>
+    <string name="foreca_cloudy_l_wet_snow">Lekki mokry śnieg</string>
+    <string name="foreca_cloudy_rain">Deszcz</string>
+    <string name="foreca_cloudy_showers">Deszcze</string>
+    <string name="foreca_cloudy_snow">Śnieg</string>
+    <string name="foreca_cloudy_snow_showers">Duże opady śniegu</string>
+    <string name="foreca_cloudy_ts_rain">Burze</string>
+    <string name="foreca_cloudy_ts_snow">Śnieżyce</string>
+    <string name="foreca_cloudy_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_cloudy_wet_snow">Mokry śnieg</string>
+    <string name="foreca_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_mostly_clear">Pogodnie</string>
+    <string name="foreca_mostly_clear_pos_rain">Możliwy deszcz</string>
+    <string name="foreca_mostly_clear_pos_snow">Możliwy śnieg</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Możliwe burze</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Możliwe śnieżyce</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Możliwy mokry śnieg</string>
+    <string name="foreca_overcast">Prognoza</string>
+    <string name="foreca_overcast_l_rain">Lekki deszcz</string>
+    <string name="foreca_overcast_l_snow">Lekki śnieg</string>
+    <string name="foreca_overcast_l_wet_snow">Light wet snow</string>
+    <string name="foreca_overcast_rain">Deszcz</string>
+    <string name="foreca_overcast_showers">Deszcze</string>
+    <string name="foreca_overcast_snow">Śnieg</string>
+    <string name="foreca_overcast_snow_showers">Śnieżyce</string>
+    <string name="foreca_overcast_ts_rain">T-storms with rain</string>
+    <string name="foreca_overcast_ts_snow">T-storms with snow</string>
+    <string name="foreca_overcast_ts_wet_snow">T-storms with wet snow</string>
+    <string name="foreca_overcast_wet_snow">Wet snow</string>
+    <string name="foreca_overcast_wet_snow_showers">Wet snow showers</string>
+    <string name="foreca_partly_cloudy">Partly cloudy</string>
+    <string name="foreca_partly_cloudy_l_rain">Light rain</string>
+    <string name="foreca_partly_cloudy_l_snow">Light snow</string>
+    <string name="foreca_partly_cloudy_l_wet_snow">Light wet snow</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Chance of t-storms with rain</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Chance of t-storms with snow</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Chance of t-storms with wet snow</string>
+    <string name="foreca_partly_cloudy_rain">Rain</string>
+    <string name="foreca_partly_cloudy_showers">Showers</string>
+    <string name="foreca_partly_cloudy_snow">Snow</string>
+    <string name="foreca_partly_cloudy_snow_showers">Snow showers</string>
+    <string name="foreca_partly_cloudy_wet_snow">Wet snow</string>
+    <string name="foreca_partly_cloudy_wet_snow_showers">Wet snow showers</string>
+    <string name="changelog">Changelog</string>
     <string name="just_now">Teraz</string>
+    <string name="loading">Wczytywanie\u2026</string>
     <string name="location_edit">Wpisz nazwę miasta</string>
     <string name="location_gps">Aktualna lokalizacja</string>
     <string name="location_list">Lokalizacje</string>
@@ -83,8 +130,11 @@ Naprawdę to doceniam!"</string>
     <string name="menu_trend">Trendy</string>
     <string name="menu_update">Odśwież</string>
     <string name="network_error">Połączenie z serwerem chwilowo niedostępne</string>
+    <string name="new_version">Nowa wersja</string>
     <string name="no_provider">"Geolokalizacja nieudana
 Wybierz lokalizację ręcznie"</string>
+    <string name="no_weather_provider">Nie znaleziono dostawy pogody</string>
+    <string name="not_now">Później</string>
     <string name="ok">OK</string>
     <string name="press_color_to_apply">Naciśnij kolor aby zastosować</string>
     <string name="pressure_units">Jednostki ciśnienia</string>
@@ -141,6 +191,7 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_update_wake_title">Wybudzenie urządzenia</string>
     <string name="settings_update_wifi_only_summary">Odświeżaj prognozę pogody tylko w obecności połączenia Wi-Fi</string>
     <string name="settings_update_wifi_only_title">Tylko z Wi-Fi</string>
+    <string name="settings_weather_provider">Dostawca pogody</string>
     <string name="settings_widgets_click_clock_summary">Wybierz aplikację do uruchomienia po dotknięciu zegara</string>
     <string name="settings_widgets_click_clock_title">Dotknięcie zegara</string>
     <string name="settings_widgets_click_date_summary">Wybierz aplikację do uruchomienia po dotknięciu daty</string>
@@ -168,12 +219,18 @@ Wybierz lokalizację ręcznie"</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Temperatura</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Domyślnie 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Wiatr</string>
+    <string name="share">Udostępnij</string>
+    <string name="share_content">\#WeatherBZ#</string>
+    <string name="share_weather_content">"\#WeatherBZ# Dziś: %1$s jest %2$s, %3$s, %4$s. Aktualizacja: %5$s."</string>
+    <string name="share_weather_title">Udostępnij dane pogody</string>
+    <string name="save_screen_shot_failed">Nie udało się zapisać zrzutu</string>
     <string name="start_time_title">Start</string>
     <string name="temperature_units">Jednostki temperatury</string>
     <string name="temperature_units_c">Celsjusz</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Kolor tekstu</string>
     <string name="updating">Odświeżanie…</string>
+    <string name="upgrade">Aktualizuj</string>
     <string name="visibility_units">Jednostki widoczności</string>
     <string name="visibility_units_km">" km"</string>
     <string name="visibility_units_m">" m"</string>
