--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -67,7 +67,7 @@
     <string name="download_video">Πάρε video</string>
     <string name="end_time_title">Τέλος</string>
     <string name="fetching_location">Ορίζεται η θέση σας\u2026</string>
-    <string name="foreca_clear">Καθαρός</string>
+    <string name="foreca_clear">Αίθριος</string>
     <string name="foreca_cloudy">Συννεφιά</string>
     <string name="foreca_cloudy_l_rain">Λίγη Βροχή</string>
     <string name="foreca_cloudy_l_snow">Λίγο Χιόνι</string>
