--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -151,8 +151,8 @@
     <string name="settings_category_animation">Animaciones</string>
     <string name="settings_category_animation_sum">Configurar las animaciones del clima y la política descarga de las animaciones</string>
     <string name="settings_category_app_update">Actualización de la aplicación</string>
-    <string name="settings_category_appearance">Aspecto</string>
-    <string name="settings_category_appearance_sum">Configurar el aspecto (unidades de medida, color de texto, etc) de la pantalla principal</string>
+    <string name="settings_category_appearance">General</string>
+    <string name="settings_category_appearance_sum">Configurar unidades de medida, color de texto, etc</string>
     <string name="settings_category_forecast_update">Actualización de predicciones</string>
     <string name="settings_category_miui">MIUI ROMs</string>
     <string name="settings_category_miui_sum">Configurar opciones MIUI (activar/desactivar, borrar datos, etc)</string>
@@ -188,7 +188,7 @@
     <string name="settings_update_wake_title">Despertar dispositivo</string>
     <string name="settings_update_wifi_only_summary">Actualizar automáticamente el pronóstico del tiempo sólo cuando se disponga de conexión Wifi</string>
     <string name="settings_update_wifi_only_title">Actualizar mediante Wi-Fi</string>
-    <string name="settings_weather_provider">Proveedor de clima</string>
+    <string name="settings_weather_provider">Proveedor de climatología</string>
     <string name="settings_widgets_click_clock_summary">Seleccione la aplicación que se iniciará al tocar el reloj</string>
     <string name="settings_widgets_click_clock_title">Clic en el reloj</string>
     <string name="settings_widgets_click_date_summary">Seleccione la aplicación que se iniciará al tocar fecha</string>
