--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -199,6 +199,7 @@
     <string name="settings_widgets_widget4x1_data_title">Extended data</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Unchecked for default background</string>
     <string name="settings_widgets_widget4x1_transparent_title">Transparent background</string>
+    <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
     <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Default value 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">City</string>
@@ -214,6 +215,7 @@
     <string name="settings_widgets_widget4x2_feel_font_title">Feelings</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">Default value 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Temperature</string>
+    <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Default value 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Wind</string>
     <string name="share">Share</string>
