--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -195,11 +195,12 @@
     <string name="settings_widgets_click_date_title">Clic en la fecha</string>
     <string name="settings_widgets_click_weather_summary">Seleccione la aplicación que se iniciará al tocar la previosión del tiempo</string>
     <string name="settings_widgets_click_weather_title">Clic en la previsión</string>
-    <string name="settings_widgets_widget4x1">Widget 4x1 Ext</string>
+    <string name="settings_widgets_widget4x1">Widget 4x1 (v4 Ext)</string>
     <string name="settings_widgets_widget4x1_data_title">Datos ampliados</string>
     <string name="settings_widgets_widget4x1_transparent_sum">Se ocultará el fondo por defecto</string>
     <string name="settings_widgets_widget4x1_transparent_title">Fondo transparente</string>
-    <string name="settings_widgets_widget4x2">Widget 4x2</string>
+    <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Por defecto 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Ciudad</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Por defecto 50sp</string>
@@ -214,6 +215,7 @@
     <string name="settings_widgets_widget4x2_feel_font_title">Sensación real</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">Por defecto 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Temperatura</string>
+    <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Por defecto 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Viento</string>
     <string name="share">Compartir</string>
@@ -254,10 +256,10 @@
     <string name="weather_sunset">"Puesta del sol: "</string>
     <string name="weather_visibility">"Visibilidad: "</string>
     <string name="weather_wind">"Viento: "</string>
-    <string name="widget_name_large">Tiempo BZ (4x2)</string>
+    <string name="widget_name_large">Tiempo BZ (4x2 v4)</string>
     <string name="widget_name_large_v5">Tiempo BZ (4x2 v5)</string>
-    <string name="widget_name_medium">Tiempo BZ (4x1)</string>
-    <string name="widget_name_medium_ext">Tiempo BZ (4x1 Ext)</string>
+    <string name="widget_name_medium">Tiempo BZ (4x1 v4)</string>
+    <string name="widget_name_medium_ext">Tiempo BZ (4x1 v4 Ext)</string>
     <string name="widget_name_medium_v5">Tiempo BZ (4x1 v5)</string>
     <string name="widget_text_color_summary">"Color del texto del widget"</string>
     <string name="wind_e">E</string>
