--- a/res/values-el/strings.xml
+++ b/res/values-el/strings.xml
@@ -125,7 +125,7 @@
     <string name="menu_hourly">Ωριαία</string>
     <string name="menu_locations">Τοποθεσίες</string>
     <string name="menu_settings">Ρυθμίσεις</string>
-    <string name="menu_trend">τάση</string>
+    <string name="menu_trend">Τάση</string>
     <string name="menu_update">Ενημέρωση</string>
     <string name="network_error">Χωρίς σύνδεση στον διακομιστή</string>
     <string name="new_version">Νέα Εκδοση</string>
@@ -151,7 +151,7 @@
     <string name="settings_category_animation">Animation</string>
     <string name="settings_category_animation_sum">Τύπος Animation type, πολιτική κατεβάσματος</string>
     <string name="settings_category_app_update">Ενημέρωση εφαρμογής</string>
-    <string name="settings_category_appearance">Κοινά</string>
+    <string name="settings_category_appearance">Γενικά</string>
     <string name="settings_category_appearance_sum">Μονάδες μέτρησης ,χρώμα κειμένου κτλ.</string>
     <string name="settings_category_forecast_update">Ενημέρωση πρόβλεψης</string>
     <string name="settings_category_miui">MIUI ROMs</string>
@@ -226,7 +226,7 @@
     <string name="temperature_units_c">Celsius</string>
     <string name="temperature_units_f">Fahrenheit</string>
     <string name="text_color_title">Χρώμα κειμένου</string>
-    <string name="updating">Updating\u2026</string>
+    <string name="updating">ενημέρωση\u2026</string>
     <string name="upgrade">Αναβάθμιση</string>
     <string name="visibility_units">Μονάδες ορατότητας</string>
     <string name="visibility_units_km">" km"</string>
