--- a/res/values-de/strings.xml
+++ b/res/values-de/strings.xml
@@ -139,6 +139,7 @@
     <string name="quiet_hours_enabled_off">Aktualisierungen funktionieren normal</string>
     <string name="quiet_hours_enabled_on">Ruhestunden aktiviert</string>
     <string name="quiet_hours_title">Ruhestunden</string>
+    <string name="save_screen_shot_failed">Screenshot konnte nicht gesichert werden</string>
     <string name="settings_about_summary">Informationen über die App</string>
     <string name="settings_about_title">Über</string>
     <string name="settings_animation_download_summary">Animationen und Videodaten für aktuelle Wetterbedingungen herunterladen (wenn Video lokal nicht auffindbar)</string>
@@ -197,7 +198,8 @@
     <string name="settings_widgets_widget4x1_data_title">Detailierte Daten</string>    
     <string name="settings_widgets_widget4x1_transparent_sum">Nicht ausgewählt für Standardhintergrund</string> 
     <string name="settings_widgets_widget4x1_transparent_title">Transparenter Hintergrund</string> 
-    <string name="settings_widgets_widget4x2">Widget 4x2 (v4)</string>
+    <string name="settings_widgets_widget4x1_v5">Widget 4x1 (v5)</string>
+    <string name="settings_widgets_widget4x2">Widget 4x2</string>
     <string name="settings_widgets_widget4x2_city_font_summary">Standardeinstellung 22sp</string>
     <string name="settings_widgets_widget4x2_city_font_title">Stadt</string>
     <string name="settings_widgets_widget4x2_clock_font_summary">Standardeinstellung 50sp</string>
@@ -212,12 +214,12 @@
     <string name="settings_widgets_widget4x2_feel_font_title">Gefühlt</string>
     <string name="settings_widgets_widget4x2_temp_font_summary">Standardeinstellung 40sp</string>
     <string name="settings_widgets_widget4x2_temp_font_title">Temperatur</string>
+    <string name="settings_widgets_widget4x2_v5">Widget 4x2 (v5)</string>
     <string name="settings_widgets_widget4x2_wind_font_summary">Standardeinstellung 14sp</string>
     <string name="settings_widgets_widget4x2_wind_font_title">Wind</string>
     <string name="share">Teilen</string>
     <string name="share_weather_content">"\#WeatherBZ# Das Wetter, heute %1$s, ist %2$s, %3$s, %4$s. Aktualisiert %5$s."</string>
     <string name="share_weather_title">Wetterdaten teilen</string>
-    <string name="save_screen_shot_failed">Screenshot konnte nicht gesichert werden</string>
     <string name="start_time_title">Beginn</string>
     <string name="temperature_units">Temperatureinheit</string>
     <string name="temperature_units_c">Celsius</string>
