--- a/res/values-es-rES/strings.xml
+++ b/res/values-es-rES/strings.xml
@@ -82,12 +82,12 @@
     <string name="foreca_cloudy_wet_snow">Aguanieve</string>
     <string name="foreca_cloudy_wet_snow_showers">Chubascos de aguanieve</string>
     <string name="foreca_mostly_clear">Despejado</string>
-    <string name="foreca_mostly_clear_pos_rain">Posibilidad de lluvia</string>
-    <string name="foreca_mostly_clear_pos_snow">Posibilidad de nieve</string>
-    <string name="foreca_mostly_clear_pos_ts_rain">Posibilidad de tormentas con lluvia</string>
-    <string name="foreca_mostly_clear_pos_ts_snow">Posibilidad de tormentas con nieve</string>
-    <string name="foreca_mostly_clear_pos_ts_wet_snow">Posibilidad de tormentas con aguanieve</string>
-    <string name="foreca_mostly_clear_pos_wet_snow">Posibilidad de aguanieve</string>
+    <string name="foreca_mostly_clear_pos_rain">Posible lluvia</string>
+    <string name="foreca_mostly_clear_pos_snow">Posibie nieve</string>
+    <string name="foreca_mostly_clear_pos_ts_rain">Posibles tormentas y lluvia</string>
+    <string name="foreca_mostly_clear_pos_ts_snow">Posibles tormentas y nieve</string>
+    <string name="foreca_mostly_clear_pos_ts_wet_snow">Posibles tormentas y aguanieve</string>
+    <string name="foreca_mostly_clear_pos_wet_snow">Posible aguanieve</string>
     <string name="foreca_overcast">Cubierto</string>
     <string name="foreca_overcast_l_rain">Ligera lluvia</string>
     <string name="foreca_overcast_l_snow">Ligera nevada</string>
@@ -105,9 +105,9 @@
     <string name="foreca_partly_cloudy_l_rain">Ligera lluvia</string>
     <string name="foreca_partly_cloudy_l_snow">Ligera nevada</string>
     <string name="foreca_partly_cloudy_l_wet_snow">Ligera aguanieve</string>
-    <string name="foreca_partly_cloudy_pos_ts_rain">Posibilidad de tormentas con lluvia</string>
-    <string name="foreca_partly_cloudy_pos_ts_snow">Posibilidad de tormentas con nieve</string>
-    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Posibilidad de tormentas con aguanieve</string>
+    <string name="foreca_partly_cloudy_pos_ts_rain">Posibles tormentas y lluvia</string>
+    <string name="foreca_partly_cloudy_pos_ts_snow">Posibles tormentas y nieve</string>
+    <string name="foreca_partly_cloudy_pos_ts_wet_snow">Posibles tormentas y aguanieve</string>
     <string name="foreca_partly_cloudy_rain">Lluvia</string>
     <string name="foreca_partly_cloudy_showers">Chubascos</string>
     <string name="foreca_partly_cloudy_snow">Nieve</string>
